--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -11,11 +11,21 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "resolutions": {
+    "browserslist": "4.16.5",
+    "glob-parent": "5.1.2",
+    "ws": "6.2.2",
+    "postcss": "7.0.36",
+    "immer": "^9.0.6",
+    "nth-check": "^2.0.1",
+    "ansi-regex": "^5.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npx npm-force-resolutions"
   },
   "eslintConfig": {
     "extends": [
